# rn_app_solution

./: .gitmodules
app/: .clang-format  .gitignore  App.tsx  package-lock.json  package.json
app/android/: build.gradle
app/android/app/: build.gradle
app/android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
app/shared/: NativeViewModelA.cpp  NativeViewModelA.h  log.h
app/specs/: NativeViewModelA.ts
